--- a/mergcall.html
+++ b/mergcall.html
@@ -368,7 +368,7 @@
    
         <section class="py-5 ">
             <div class="container">
-                <div class="row border-bottom">
+                <div class="row border-bottom px-lg-0 px-3">
                     <div class="col-lg-12 mb-4 text-center">
                         <span class="title">Be up and running in minutes.
                         </span>
@@ -376,8 +376,8 @@
                             Why do our customers love mergeCall?
                         </h2>
                     </div>
-                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 ">
-                        <div class=" px-3 py-4 text-center merg-card bg-light">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 bg-light">
+                        <div class="  text-center merg-card ">
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
@@ -392,7 +392,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
-                        <div class="px-3 py-4 text-center merg-card">
+                        <div class=" text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -405,8 +405,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 ">
-                        <div class="px-3 py-4 text-center merg-card bg-light">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 bg-light">
+                        <div class=" text-center merg-card ">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -420,7 +420,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
-                        <div class=" px-3 py-4 text-center merg-card">
+                        <div class="  text-center merg-card">
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
@@ -433,8 +433,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 ">
-                        <div class="px-3 py-4 text-center merg-card bg-light">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 bg-light">
+                        <div class=" text-center merg-card ">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -449,7 +449,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
-                        <div class=" px-3 py-4 text-center merg-card">
+                        <div class="  text-center merg-card">
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
@@ -463,8 +463,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 ">
-                        <div class=" px-3 py-4 text-center merg-card bg-light">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 bg-light ">
+                        <div class="  text-center merg-card ">
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
@@ -479,7 +479,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
-                        <div class="px-3 py-4 text-center merg-card">
+                        <div class=" text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -493,8 +493,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 ">
-                        <div class="px-3 py-4 text-center merg-card bg-light">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 bg-light">
+                        <div class=" text-center merg-card ">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -510,7 +510,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
-                        <div class=" px-3 py-4 text-center merg-card">
+                        <div class="  text-center merg-card">
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
@@ -525,8 +525,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 ">
-                        <div class="px-3 py-4 text-center merg-card bg-light">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 bg-light">
+                        <div class=" text-center merg-card ">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -540,7 +540,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 ">
-                        <div class="px-3 py-4 text-center merg-card">
+                        <div class=" text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
