--- a/mergeasy.html
+++ b/mergeasy.html
@@ -513,7 +513,7 @@
         </section>
         <section class="py-5 ">
             <div class="container">
-                <div class="row border-bottom">
+                <div class="row border-bottom px-lg-0 px-3">
                     <div class="col-lg-12 mb-3 text-center">
                         <span class="title">Types</span>
                         <h2 class="main-heading ">
