--- a/mergsign.html
+++ b/mergsign.html
@@ -412,7 +412,7 @@
                             <li><i class="bi bi-check text-success me-2"></i>International </li>
                         </ul> -->
                     </div>
-                    <div class="col-lg-6  ms-lg-auto mx-lg-0 mx-auto">
+                    <div class="col-lg-6  ms-lg-auto mx-lg-0 mx-auto order-lg-2 order-1">
                         <div class="app-box-row d-flex justify-content-center">
                             <img src="assets/images/ui-workflow-idv.svg" alt="Choose deliery" class=" img-fluid rounded-3">
                         </div>
