--- a/index.html
+++ b/index.html
@@ -928,6 +928,9 @@
                     items: 3,
                 },
                 1000: {
+                    items: 3,
+                },
+                1200: {
                     items: 5,
                 }
             }
