--- a/chrome-extension.html
+++ b/chrome-extension.html
@@ -63,7 +63,7 @@
                                     <div class="ms-lg-4 ms-0 mb-3">
                                         <a href="mergsign.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
-                                                <div class="nav-icon"><i class="bi bi-telephone"></i></div>
+                                                <div class="nav-icon"><i class="bi bi-pencil-square"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">MergSign</h2>
                                                     <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
@@ -77,7 +77,7 @@
                                     <div class="mb-lg-0 mb-3">
                                         <a href="mergcall.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
-                                                <div class="nav-icon"><i class="bi bi-pencil"></i></div>
+                                                <div class="nav-icon"><i class="bi bi-telephone"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">MergCall</h2>
                                                     <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
@@ -272,16 +272,16 @@
                         </p>
                         <div class="d-lg-flex d-none align-items-center flex-sm-row flex-column mt-4">
                             <div class="hero-btn">
-                                <a href="contact.php" class="animated-button1">
+                                <a target="_blank" href="https://chromewebstore.google.com/detail/mergecall/ihgbmckjcoehaahnhhfcilllgkhkdgkh#:~:text=MergeCall%20Chrome%20Dialer%20is%20a%20streamlined" class="animated-button1">
                                     <span></span>
                                     <span></span>
                                     <span></span>
                                     <span></span>
-                                    Request For demo</a>
+                                    Download From Chrome WebStore </a>
                             </div>
-                            <div class="hero-btn">
+                            <!-- <div class="hero-btn">
                                 <a href="" class="secondry-button">Get Started</a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-5 mx-auto mt-lg-0 mt-3 ">
@@ -458,9 +458,9 @@
                             Never Miss a Call
                         </h2>
                         <p class="text2">
-                            Not only can you initiate calls and texts from any browser tab (whether you’re in smrtPhone
+                            Not only can you initiate calls and texts from any browser tab (whether you’re in mergeasy
                             or anywhere else on the internet), you can also quickly answer incoming calls. Don’t hunt
-                            for a ringing tab, just pin your smrtPhone Chrome Extension and decide whether to answer,
+                            for a ringing tab, just pin your mergeasy Chrome Extension and decide whether to answer,
                             ignore, or reject a call without leaving the page you’re viewing.
                         </p>
                         <!-- <ul class="text-start cloud-list list-unstyled">
@@ -544,9 +544,9 @@
                             Synced to Your CRM
                         </h2>
                         <p class="text2">
-                            Your Chrome Extension is one of four smrtPhone dialers, which means all calls, texts, and
+                            Your Chrome Extension is one of four mergeasy dialers, which means all calls, texts, and
                             notes are synced to your CRM. Communicate from any browser, even if you’re not on the
-                            smrtPhone Web App, and those calls and texts will show up in your CRM’s communication
+                            mergeasy Web App, and those calls and texts will show up in your CRM’s communication
                             history. Access your inbox voicemails and recent calls from a simple dropdown.
                         </p>
 
