--- a/mergeasy.html
+++ b/mergeasy.html
@@ -63,7 +63,7 @@
                                     <div class="ms-lg-4 ms-0 mb-3">
                                         <a href="mergsign.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
-                                                <div class="nav-icon"><i class="bi bi-telephone"></i></div>
+                                                <div class="nav-icon"><i class="bi bi-pencil-square"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">MergSign</h2>
                                                     <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
@@ -77,7 +77,7 @@
                                     <div class="mb-lg-0 mb-3">
                                         <a href="mergcall.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
-                                                <div class="nav-icon"><i class="bi bi-pencil"></i></div>
+                                                <div class="nav-icon"><i class="bi bi-telephone"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">MergCall</h2>
                                                     <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
@@ -528,7 +528,7 @@
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Signing a contract-bro.svg" alt="" class="img-fluid">
+                                <img src="assets/images//mergeasyFeature/Agreement-rafiki.png" alt="" class="img-fluid">
                             </div>
                             <h5>Contract / Agreeements
                             </h5>
@@ -545,7 +545,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Online document-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Marketing-bro.png" alt="" class="img-fluid">
                             </div>
                             <h5>Marketing Documents
                             </h5>
@@ -563,7 +563,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Online document-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Education-rafiki.png" alt="" class="img-fluid">
                             </div>
                             <h5>Eductional Documents
                             </h5>
@@ -581,7 +581,7 @@
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Calling-bro.svg" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Documents-pana.png" alt="" class="img-fluid">
                             </div>
                             <h5>Personalized Documents
                             </h5>
@@ -598,7 +598,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Online document-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Signing a contract-bro.png" alt="" class="img-fluid">
                             </div>
                             <h5>Real Estate Contracts & Rentals
                             </h5>
@@ -617,7 +617,7 @@
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Calling-bro.svg" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Invoice-rafiki.png" alt="" class="img-fluid">
                             </div>
                             <h5>Invoices & Receipts
                             </h5>
@@ -634,7 +634,7 @@
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Signing a contract-bro.svg" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Pricing plans-rafiki.png" alt="" class="img-fluid">
                             </div>
                             <h5>Proposals & Quotes
                             </h5>
@@ -651,7 +651,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Online document-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Online document-bro.png" alt="" class="img-fluid">
                             </div>
                             <h5>HR Documents
                             </h5>
@@ -668,7 +668,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Online document-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Sales consulting-rafiki.png" alt="" class="img-fluid">
                             </div>
                             <h5>Purchase & Sales Orders
                             </h5>
@@ -717,12 +717,12 @@
                                 </li>
                                 <li class="border-bottom rounded-0">
                                     <i class="fa fa-question-circle icon-help" aria-hidden="true"></i>
-                                    <a data-bs-toggle="collapse" data-bs-target="#faq-list-1" class="collapsed">
+                                    <a data-bs-toggle="collapse" data-bs-target="#faq-list-11" class="collapsed">
                                         What is Mergeasy?
                                         <i class="fa fa-sm fa-angle-down icon-show" aria-hidden="true"></i>
                                         <i class="fa fa-sm fa-angle-up icon-close"></i>
                                     </a>
-                                    <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list">
+                                    <div id="faq-list-11" class="collapse" data-bs-parent=".faq-list">
                                         <p>
                                             Mergeasy is a digital solution that streamlines document signing, calling,
                                             and management processes with services like MergeSign and MergeCall, helping
@@ -766,7 +766,7 @@
                             </ul>
                         </div>
                         <div class="mt-4 ">
-                            <a href="contact.php" class="animated-button1">
+                            <a href="faq.html" class="animated-button1">
                                 <span></span>
                                 <span></span>
                                 <span></span>
