--- a/mergsign.html
+++ b/mergsign.html
@@ -63,7 +63,7 @@
                                     <div class="ms-lg-4 ms-0 mb-3">
                                         <a href="mergsign.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
-                                                <div class="nav-icon"><i class="bi bi-telephone"></i></div>
+                                                <div class="nav-icon"><i class="bi bi-pencil-square"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">MergSign</h2>
                                                     <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
@@ -77,7 +77,7 @@
                                     <div class="mb-lg-0 mb-3">
                                         <a href="mergcall.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
-                                                <div class="nav-icon"><i class="bi bi-pencil"></i></div>
+                                                <div class="nav-icon"><i class="bi bi-telephone"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">MergCall</h2>
                                                     <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
@@ -354,7 +354,7 @@
                         <p class="text2">
                             And provide more intuitive experiences for your customers through <b>custom branding </b> and <b>responsive signing</b>.
                         </p>
-                        <div class="mt-4 ">
+                        <!-- <div class="mt-4 ">
                             <a href="contact.php" class="animated-button1">
                                 <span></span>
                                 <span></span>
@@ -362,7 +362,7 @@
                                 <span></span>
                                Learn More
                             </a>
-                        </div>
+                        </div> -->
                         <!-- <ul class="text-start cloud-list list-unstyled">
                             <li><i class="bi bi-check text-success me-2"></i>
                                 Instant local &amp; toll free numbers</li>
@@ -394,7 +394,7 @@
                              <b>robust threat detection capabilities.</b>
                         </p>
                     
-                        <div class="mt-4 ">
+                        <!-- <div class="mt-4 ">
                             <a href="contact.php" class="animated-button1">
                                 <span></span>
                                 <span></span>
@@ -402,7 +402,7 @@
                                 <span></span>
                                Learn More
                             </a>
-                        </div>
+                        </div> -->
                         <!-- <ul class="text-start cloud-list list-unstyled">
                             <li><i class="bi bi-check text-success me-2"></i>
                                 Instant local &amp; toll free numbers</li>
@@ -444,7 +444,7 @@
                               industry-leading number of <b>pre-built integrations</b> and <b>award-winning APIs</b>.
                         </p>
                         
-                        <div class="mt-4 ">
+                        <!-- <div class="mt-4 ">
                             <a href="contact.php" class="animated-button1">
                                 <span></span>
                                 <span></span>
@@ -452,7 +452,7 @@
                                 <span></span>
                                Learn More
                             </a>
-                        </div>
+                        </div> -->
                         <!-- <ul class="text-start cloud-list list-unstyled">
                             <li><i class="bi bi-check text-success me-2"></i>
                                 Instant local &amp; toll free numbers</li>
@@ -483,12 +483,12 @@
                             <ul>
                                 <li class="border-bottom rounded-0">
                                     <i class="fa fa-question-circle icon-help" aria-hidden="true"></i>
-                                    <a data-bs-toggle="collapse" data-bs-target="#faq-list-1" class="collapsed">
+                                    <a data-bs-toggle="collapse" data-bs-target="#faq-list-11" class="collapsed">
                                         What is Mergeasy?
                                         <i class="fa fa-sm fa-angle-down icon-show" aria-hidden="true"></i>
                                         <i class="fa fa-sm fa-angle-up icon-close"></i>
                                     </a>
-                                    <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list">
+                                    <div id="faq-list-11" class="collapse" data-bs-parent=".faq-list">
                                         <p>
                                             Mergeasy is a digital solution that streamlines document signing, calling,
                                             and management processes with services like MergeSign and MergeCall, helping
@@ -547,7 +547,7 @@
                             </ul>
                         </div>
                         <div class="mt-4 ">
-                            <a href="contact.php" class="animated-button1">
+                            <a href="faq.html" class="animated-button1">
                                 <span></span>
                                 <span></span>
                                 <span></span>
