--- a/mobile-application.html
+++ b/mobile-application.html
@@ -63,7 +63,7 @@
                                     <div class="ms-lg-4 ms-0 mb-3">
                                         <a href="mergsign.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
-                                                <div class="nav-icon"><i class="bi bi-telephone"></i></div>
+                                                <div class="nav-icon"><i class="bi bi-pencil-square"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">MergSign</h2>
                                                     <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
@@ -77,7 +77,7 @@
                                     <div class="mb-lg-0 mb-3">
                                         <a href="mergcall.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
-                                                <div class="nav-icon"><i class="bi bi-pencil"></i></div>
+                                                <div class="nav-icon"><i class="bi bi-telephone"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">MergCall</h2>
                                                     <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
@@ -263,7 +263,7 @@
                             Mobile Application
                         </h1>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
-                            smrtCall’s free Mobile App gives you instant access to your CRM contacts no matter where you
+                            Mergeasy’s free Mobile App gives you instant access to your CRM contacts no matter where you
                             are. Make calls, send texts, and be available on-the-go, all automatically synced to your
                             CRM.
                         </p>
@@ -403,7 +403,7 @@
                             <div class="my-3">
                                 <img src="assets/images/mobile-feature/Switches-bro.png" alt="" class="img-fluid">
                             </div>
-                            <h5 class="">Easily Switch Between smrtPhone Accounts</h5>
+                            <h5 class="">Easily Switch Between mergeasy Accounts</h5>
                         </div>
                     </div>
                     <div class="col-lg-3 mb-lg-0 mb-3">
@@ -441,7 +441,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6 col-md-6 mx-auto mt-lg-0 mt-3 me-auto">
                         <div class="app-box-row d-flex justify-content-center">
-                            <img src="assets/images/mobile-app-product-content-img-1@2x-915x654.png.avif"
+                            <img src="assets/images/mobile-app-product-content-img-3@2x-915x654.png.avif"
                                 alt="Choose deliery" class=" img-fluid rounded-3">
                         </div>
                     </div>
@@ -455,7 +455,7 @@
                             A lot of our clients are on the go: driving to appointments, checking out a new property, or
                             working from a remote job site. First mover advantage says you shouldn’t rely on voicemail
                             or an answering service. Answer whenever your leads and clients need to talk with
-                            smrtPhone’s Mobile App. </p>
+                            mergeasy’s Mobile App. </p>
                         <!-- <ul class="text-start cloud-list list-unstyled">
                             <li><i class="bi bi-check text-success me-2"></i>
                                 Instant local &amp; toll free numbers</li>
@@ -482,8 +482,8 @@
                         </h2>
                         <p class="text2">
                             It’s not just about hyper-availability, it’s about keeping your work communication
-                            centralized in smrtPhone. No matter where you are, your call logs and notes are updated and
-                            kept within the smrtPhone system. That also means your employees aren’t walking away with
+                            centralized in mergeasy. No matter where you are, your call logs and notes are updated and
+                            kept within the mergeasy system. That also means your employees aren’t walking away with
                             leads if they ever leave.
                         </p>
                         <!--                     
@@ -578,12 +578,12 @@
                             <ul>
                                 <li class="border-bottom rounded-0">
                                     <i class="fa fa-question-circle icon-help" aria-hidden="true"></i>
-                                    <a data-bs-toggle="collapse" data-bs-target="#faq-list-1" class="collapsed">
+                                    <a data-bs-toggle="collapse" data-bs-target="#faq-list-11" class="collapsed">
                                         What is Mergeasy?
                                         <i class="fa fa-sm fa-angle-down icon-show" aria-hidden="true"></i>
                                         <i class="fa fa-sm fa-angle-up icon-close"></i>
                                     </a>
-                                    <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list">
+                                    <div id="faq-list-11" class="collapse" data-bs-parent=".faq-list">
                                         <p>
                                             Mergeasy is a digital solution that streamlines document signing, calling,
                                             and management processes with services like MergeSign and MergeCall, helping
@@ -642,7 +642,7 @@
                             </ul>
                         </div>
                         <div class="mt-4 ">
-                            <a href="contact.php" class="animated-button1">
+                            <a href="faq.html" class="animated-button1">
                                 <span></span>
                                 <span></span>
                                 <span></span>
