--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                     <div class="ms-lg-4 ms-0 mb-3">
                                         <a href="mergsign.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
-                                                <div class="nav-icon"><i class="bi bi-telephone"></i></div>
+                                                <div class="nav-icon"><i class="bi bi-pencil-square"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">MergSign</h2>
                                                     <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
@@ -77,7 +77,7 @@
                                     <div class="mb-lg-0 mb-3">
                                         <a href="mergcall.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
-                                                <div class="nav-icon"><i class="bi bi-pencil"></i></div>
+                                                <div class="nav-icon"><i class="bi bi-telephone"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">MergCall</h2>
                                                     <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
@@ -326,7 +326,7 @@
                                 Effortlessly sign up to 300 documents per month and manage contracts. No extra cost for
                                 developer API like DocuSign
                             </p>
-                            <a href="" class="btn-nav shadow-sm">Learn More</a>
+                            <a href="mergsign.html" class="btn-nav shadow-sm">Learn More</a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mx-auto mb-lg-0 mb-4">
@@ -341,7 +341,7 @@
                                 $10 worth of calling/SMS credits included every month with your subscription, with
                                 additional top-up options.
                             </p>
-                            <a href="" class="btn-nav shadow-sm">Learn More</a>
+                            <a href="mergcall.html" class="btn-nav shadow-sm">Learn More</a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mx-auto mb-lg-0 mb-4">
@@ -356,7 +356,7 @@
                                 Merge and organize up to 300 documents monthly. Add extra credits for high-volume
                                 operations.
                             </p>
-                            <a href="" class="btn-nav shadow-sm">Learn More</a>
+                            <a href="mergeasy.html" class="btn-nav shadow-sm">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -727,7 +727,93 @@
                 </div>
             </div>
         </section>
-        <section class="">
+        <section class="py-5 bg-light">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <section class="testimonials ">
+                            <div class="container ">
+                                <h2 class="main-heading text-primary text-center">
+                                    Testimonials
+                                </h2>
+                                <p class="text2 text-center">
+                                    Hear From Our Satisfied Users
+                                </p>
+                                <div class="owl-carousel owl-theme testi mt-4 justify-content-center">
+                                    <div class="item">
+                                        <div class="profile">
+                                            <img src="https://images.unsplash.com/photo-1521225099409-8e1efc95321d?ixlib=rb-1.2.1&auto=format&fit=crop&h=153&q=80"
+                                                alt="">
+                                            <div class="information">
+                                                <div class="stars">
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                </div>
+                                                <p>Jane Doe</p>
+                                                <span>CEO of Acme Corp</span>
+                                            </div>
+                                        </div>
+                                        <p>The API access at no extra cost was a game-changer for our integrations.
+                                            Mergeasy’s flexibility is unbeatable</p>
+                                        <div class="icon">
+                                            <i class="fa fa-quote-right" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="profile">
+                                            <img src="https://images.unsplash.com/photo-1521225099409-8e1efc95321d?ixlib=rb-1.2.1&auto=format&fit=crop&h=153&q=80"
+                                                alt="">
+                                            <div class="information">
+                                                <div class="stars">
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                </div>
+                                                <p>John Smith</p>
+                                                <span>Operations Manager at Beta LLC</span>
+                                            </div>
+                                        </div>
+                                        <p>We save hundreds every month with Mergeasy’s unlimited users and built-in
+                                            calling credits</p>
+                                        <div class="icon">
+                                            <i class="fa fa-quote-right" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                    <div class="item">
+                                        <div class="profile">
+                                            <img src="https://images.unsplash.com/photo-1521225099409-8e1efc95321d?ixlib=rb-1.2.1&auto=format&fit=crop&h=153&q=80"
+                                                alt="">
+                                            <div class="information">
+                                                <div class="stars">
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                    <i class="fa fa-star"></i>
+                                                </div>
+                                                <p>John Smith</p>
+                                                <span>Operations Manager at Beta LLC</span>
+                                            </div>
+                                        </div>
+                                        <p>We save hundreds every month with Mergeasy’s unlimited users and built-in
+                                            calling credits</p>
+                                        <div class="icon">
+                                            <i class="fa fa-quote-right" aria-hidden="true"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
+            </div>
+        </section> 
+        <section class="bg-light">
             <div class="container ">
                 <div class="row">
                     <div class="col-lg-10 mx-auto">
