--- a/plan&pricing.html
+++ b/plan&pricing.html
@@ -63,7 +63,7 @@
                                     <div class="ms-lg-4 ms-0 mb-3">
                                         <a href="mergsign.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
-                                                <div class="nav-icon"><i class="bi bi-telephone"></i></div>
+                                                <div class="nav-icon"><i class="bi bi-pencil-square"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">MergSign</h2>
                                                     <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
@@ -77,7 +77,7 @@
                                     <div class="mb-lg-0 mb-3">
                                         <a href="mergcall.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
-                                                <div class="nav-icon"><i class="bi bi-pencil"></i></div>
+                                                <div class="nav-icon"><i class="bi bi-telephone"></i></div>
                                                 <div class="ms-2">
                                                     <h2 class="mb-0 pb-0">MergCall</h2>
                                                     <p class="text-sm mb-0 pb-0">Lorem ipsum adipisicing.</p>
