--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/buttons.css">
 
@@ -263,25 +265,33 @@
                             All-In-One Platform
                             <span>for</span><br>
                         </h1>
-                        <h2 class="services-title">
-                            Merg<span class="text-primary">Merg</span> <span class="desc">(Document Merging).</span>
-                        </h2>
-                        <h2 class="services-title">
-                            Merg<span class="text-primary">Sign</span> <span class="desc">(eSignatures).</span>
-                        </h2>
-                        <h2 class="services-title">
-                            Merg<span class="text-primary">Call</span> <span class="desc">(Calling).</span>
-                        </h2>
+                       <div class="overflow-hidden">
+                        <h2 class="services-title"
+                        data-aos="fade-up"
+                       data-aos-duration="1500">
+                           Merg<span class="text-primary">Merg</span> <span class="desc">(Document Merging).</span>
+                       </h2>
+                       <h2 class="services-title"
+                       data-aos="fade-up"
+                       data-aos-duration="2000">
+                           Merg<span class="text-primary">Sign</span> <span class="desc">(eSignatures).</span>
+                       </h2>
+                       <h2 class="services-title overflow-hidden"
+                       data-aos="fade-up"
+                       data-aos-duration="2500">
+                           Merg<span class="text-primary">Call</span> <span class="desc">(Calling).</span>
+                       </h2>
+                       </div>
 
                         <p class="hero-text pe-lg-3 mt-2 mb-lg-4 mb-3">
                             Manage your documents, signatures, and communication seamlessly with our platform, plus
                             enjoy developer API access at no extra cost.
                         </p>
                         <div class="d-lg-none d-block mt-2 mb-4">
-                            <img src="assets/images/hero-image.webp" alt="" class="img-fluid  rounded-1  ">
+                            <img src="assets/images/hero-image.webp" alt="" class="img-fluid  rounded-1  " data-aos="zoom-in" data-aos-duration="1000">
                         </div>
                         <div class="d-flex align-items-center flex-sm-row flex-column">
-                            <div class="hero-btn">
+                            <div class="hero-btn" >
                                 <!-- <a href="" class="btn-primary animated-button">Start Free Trial</a> -->
                                 <a href="contact.php" class="animated-button1">
                                     <span></span>
@@ -296,7 +306,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-5 d-lg-block d-none">
+                    <div class="col-xl-6 col-lg-5 d-lg-block d-none" data-aos="zoom-in" data-aos-duration="1000">
                         <img src="assets/images/hero-image.webp" alt="" class="img-fluid shadow rounded-1 mt-lg-4">
                     </div>
                 </div>
@@ -318,7 +328,7 @@
                         <div class=" px-3 py-4 text-center merg-card">
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
-                            <div class="my-3">
+                            <div class="my-3" data-aos="zoom-in" data-aos-duration="500">
                                 <img src="assets/images/Signing a contract-bro.svg" alt="" class="img-fluid">
                             </div>
                             <h5>Secure & Compliant eSignatures</h5>
@@ -333,7 +343,7 @@
                         <div class=" px-3 py-4 text-center merg-card">
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
-                            <div class="my-3">
+                            <div class="my-3" data-aos="zoom-in" data-aos-duration="1000">
                                 <img src="assets/images/Calling-bro.svg" alt="" class="img-fluid">
                             </div>
                             <h5>Integrated Calling & Messaging</h5>
@@ -348,7 +358,7 @@
                         <div class="px-3 py-4 text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
-                            <div class="my-3">
+                            <div class="my-3" data-aos="zoom-in" data-aos-duration="1500">
                                 <img src="assets/images/Online document-rafiki.png" alt="" class="img-fluid">
                             </div>
                             <h5>Flexible Document Merging</h5>
@@ -390,7 +400,7 @@
                                 </p>
                             </li>
                         </ul>
-                        <div>
+                        <div data-aos="fade-up" data-aos-duration="1000">
                             <a href="contact.php" class="animated-button1">
                                 <span></span>
                                 <span></span>
@@ -401,7 +411,7 @@
                         </div>
                     </div>
                     <div class="col-lg-5 mt-lg-0 mt-3">
-                        <img src="assets/images/preview (6).webp" alt="" class="img-fluid shadow rounded-1">
+                        <img src="assets/images/preview (6).webp" alt="" class="img-fluid shadow rounded-1" data-aos="zoom-in" data-aos-duration="1000">
                     </div>
                 </div>
             </div>
@@ -419,7 +429,7 @@
                         </p>
                     </div>
                     <div class="col-lg-3 mb-lg-0 mb-5">
-                        <div
+                        <div data-aos="fade-up" data-aos-duration="1000"
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">01</div>
                             <div class="mb-4">
@@ -433,7 +443,7 @@
                     </div>
 
                     <div class="col-lg-3 mb-lg-0 mb-5">
-                        <div
+                        <div data-aos="fade-up" data-aos-duration="1500"
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">02</div>
                             <div class="mb-4">
@@ -449,7 +459,7 @@
 
 
                     <div class="col-lg-3 mb-lg-0 mb-5">
-                        <div
+                        <div data-aos="fade-up" data-aos-duration="2000"
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">03</div>
                             <div class="mb-4">
@@ -463,7 +473,7 @@
                     </div>
 
                     <div class="col-lg-3 mb-lg-0 mb-5">
-                        <div
+                        <div data-aos="fade-up" data-aos-duration="2500"
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">04</div>
                             <div class="mb-4">
@@ -532,7 +542,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12 d-flex justify-content-center">
-                        <div class="mt-4 pt-2 ">
+                        <div class="mt-4 pt-2 " data-aos="fade-up" data-aos-duration="1000">
                             <a href="competitors.html" class="animated-button1">
                                 <span></span>
                                 <span></span>
@@ -974,6 +984,8 @@
     <script src="https://code.jquery.com/jquery-3.7.1.slim.js"
         integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
     <script>
 
         $('.testi').owlCarousel({
@@ -1074,6 +1086,9 @@
 
 
     </script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 
 </html>
