--- a/demo-details.html
+++ b/demo-details.html
@@ -298,7 +298,7 @@
                                                 class="partner-img"></a>
                                     </div>
                                     <div class="item shadow-sm my-4">
-                                        <a href=""><img src="assets/images/partners/chrome-removebg-preview.png" alt=""
+                                        <a href=""><img src="assets/images/partners/chrome.svg" alt=""
                                                 class="partner-img"></a>
                                     </div>
                                     <div class="item shadow-sm my-4">
