--- a/mergcall.html
+++ b/mergcall.html
@@ -895,7 +895,7 @@
                                         </div>
                                         <div class="item shadow-sm my-4">
                                             <a href><img
-                                                    src="assets/images/partners/chrome-removebg-preview.png"
+                                                    src="assets/images/partners/chrome.svg"
                                                     alt
                                                     class="partner-img"></a>
                                         </div>
