--- a/mergeasy.html
+++ b/mergeasy.html
@@ -801,7 +801,7 @@
                                                 class="partner-img"></a>
                                     </div>
                                     <div class="item shadow-sm my-4">
-                                        <a href=""><img src="assets/images/partners/chrome-removebg-preview.png" alt=""
+                                        <a href=""><img src="assets/images/partners/chrome.svg" alt=""
                                                 class="partner-img"></a>
                                     </div>
                                     <div class="item shadow-sm my-4">
@@ -820,7 +820,7 @@
                                         <a href=""><img src="assets/images/partners/zapier-removebg-preview.png" alt=""
                                                 class="partner-img"></a>
                                     </div>
-                                    <div class="item shadow-sm">
+                                    <div class="item shadow-sm my-4">
                                         <a href=""><img src="assets/images/partners/salesforce.png" alt=""
                                                 class="partner-img">
                                         </a>
