--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                                                 class="partner-img"></a>
                                     </div>
                                     <div class="item shadow-sm">
-                                        <a href=""><img src="assets/images/partners/chrome-removebg-preview.png" alt=""
+                                        <a href=""><img src="assets/images/partners/chrome.svg" alt=""
                                                 class="partner-img"></a>
                                     </div>
                                     <div class="item shadow-sm">
