--- a/mergeasy.html
+++ b/mergeasy.html
@@ -842,7 +842,7 @@
                             <div class="hero-text w-100">
                                 <div
                                     class="d-flex align-items-center flex-sm-row flex-column justify-content-center mt-4">
-                                    <div class="hero-btn">
+                                    <div class="hero-btn" data-aos="fade-up" data-aos-duration="1000">
                                         <!-- <a href="" class="btn-primary animated-button">Start Free Trial</a> -->
                                         <a href="contact.php" class="animated-button1">
                                             <span></span>
@@ -852,7 +852,7 @@
                                             Start Free Trial
                                         </a>
                                     </div>
-                                    <div class="hero-btn">
+                                    <div class="hero-btn" data-aos="fade-up" data-aos-duration="1000">
                                         <a href="https://mergeasy.docs.apiary.io/" class="secondry-button">Explore API
                                             Features</a>
                                     </div>
